--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 		}
 	}
 </script>
-
+	</br>
 <div data-role="page">
-	<div data-role="header">
+	<div data-role="footer">
 		<h2>Calculate your taxes</h2>
 	</div>
 
@@ -45,13 +45,14 @@
 			<label for="name">Your taxes:</label>
 			<input type="text" name="taxes" id="t" value="" placeholder="for example '8%'"></input>
 		</div>
-
+	</br>
+	</br>
 		<input type="button" value="Calculate" onclick="afis()"></input>
     	<input type="reset" value="Reset" ></input>
 
 		</form>
 	</div>
-
+	</br>
 	<div data-role="footer">
 		<h2>Mihaita Nicolae</h2>
 		<center><a href="mailto:mihaita.nicolae@gmail.com" style="text-decoration:none">mihaita.nicolae@gmail.com</a></center>
