--- a/index.html
+++ b/index.html
@@ -22,28 +22,28 @@
 		}
 	}
 </script>
-	</br>
+
 <div data-role="page">
 	<div data-role="footer">
 		<h2>Calculate your taxes</h2>
 	</div>
-
+	</br>
 	<div data-role="main" class="ui-content">
 		<form>
 
 		<div class="ui-field-contain">
 			<label for="name">Numbers of hours per month:</label>
-			<input type="text" name="hour" id="n" value="" placeholder="for example '100'"></input>
+			<input type="number" name="hour" id="n" value="" placeholder="for example '100'"></input>
 		</div>
-
+	</br>
 		<div class="ui-field-contain">
 			<label for="name">Salary per hour:</label>
-			<input type="text" name="salary" id="s" value="" placeholder="for example '60'"></input>
+			<input type="number" name="salary" id="s" value="" placeholder="for example '60'"></input>
 		</div>
-
+	</br>
 		<div class="ui-field-contain">
 			<label for="name">Your taxes:</label>
-			<input type="text" name="taxes" id="t" value="" placeholder="for example '8%'"></input>
+			<input type="number" name="taxes" id="t" value="" placeholder="for example '8'"></input>
 		</div>
 	</br>
 	</br>
