--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.css">
 	<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-	<script src="http://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.js"></script>  
+	<script src="http://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.js"></script> 
+	<style>
+		a{
+			text-decoration: none;
+		}
+	</style> 
 </head>
 <body>
 
@@ -32,17 +37,17 @@
 		<form>
 
 		<div class="ui-field-contain">
-			<label for="name">Numbers of hours per month:</label>
+			<label for="name" >Number of hours per month:<a href="#info" class="ui-btn ui-shadow ui-corner-all ui-icon-info ui-btn-icon-notext" data-transition="pop">INFO</a></label>
 			<input type="number" name="hour" id="n" value="" placeholder="for example '100'"></input>
 		</div>
-	</br>
+	
 		<div class="ui-field-contain">
-			<label for="name">Salary per hour:</label>
+			<label for="name">Salary per hour:<a href="#info2" class="ui-btn ui-shadow ui-corner-all ui-icon-info ui-btn-icon-notext" data-transition="pop">INFO</a></label>
 			<input type="number" name="salary" id="s" value="" placeholder="for example '60'"></input>
 		</div>
-	</br>
+	
 		<div class="ui-field-contain">
-			<label for="name">Your taxes:</label>
+			<label for="name">Your taxes:<a href="#info3" class="ui-btn ui-shadow ui-corner-all ui-icon-info ui-btn-icon-notext" data-transition="pop">INFO</a></label>
 			<input type="number" name="taxes" id="t" value="" placeholder="for example '8'"></input>
 		</div>
 	</br>
@@ -55,7 +60,39 @@
 	</br>
 	<div data-role="footer">
 		<h2>Mihaita Nicolae</h2>
-		<center><a href="mailto:mihaita.nicolae@gmail.com" style="text-decoration:none">mihaita.nicolae@gmail.com</a></center>
+		<center><a href="mailto:mihaita.nicolae@gmail.com">mihaita.nicolae@gmail.com</a></center>
+		<center><a href="tel:50217732">50 21 77 32</a></center>
+	</div>
+
+</div>
+
+<div data-role="page" id="info">
+	<div data-role="header">
+		<h2>Number of hours per month</h2>
+	</div>
+	<div data-role="main" class="ui-content">
+		<p>In this field you have to introduce how many hours you have work in one month, for example in one month you had 100h/month, in the field you have to introduce 100.</p>
+		<a href="index.html" data-role="button" data-rel="back" data-theme="b" class="ui-link ui-btn ui-btn-b ui-shadow ui-corner-all ui-icon-delete ui-btn-icon-right" role="button">Close</a>
+	</div>
+</div>
+
+<div data-role="page" id="info2">
+	<div data-role="header">
+		<h2>Salary per hour</h2>
+	</div>
+	<div data-role="main" class="ui-content">
+		<p>In this field you have to introduce your salary that you are earning per hour, for example you are earning 120kr/h in the field you have to introduce 120.</p>
+		<a href="index.html" data-role="button" data-rel="back" data-theme="b" class="ui-link ui-btn ui-btn-b ui-shadow ui-corner-all ui-icon-delete ui-btn-icon-right" role="button">Close</a>
+	</div>
+</div>
+
+<div data-role="page" id="info3">
+	<div data-role="header">
+		<h2>Your taxes</h2>
+	</div>
+	<div data-role="main" class="ui-content">
+		<p>In this field you have to introduce your taxes. When you area student in Denmark you have 8% taxes other wise you will have 37% or more, for example your taxes are 8%, in the firls you have to introduce 8.</p>
+		<a href="index.html" data-role="button" data-rel="back" data-theme="b" class="ui-link ui-btn ui-btn-b ui-shadow ui-corner-all ui-icon-delete ui-btn-icon-right" role="button">Close</a>
 	</div>
 </div>
 
