--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
 		<form>
 
 		<div class="ui-field-contain">
-			<label for="name" >Number of hours per month:<a href="#info" class="ui-btn ui-shadow ui-corner-all ui-icon-info ui-btn-icon-notext" data-transition="pop">INFO</a></label>
+			<label for="name" >Number of hours per month:<a href="#info" class="ui-btn ui-shadow ui-corner-all ui-icon-info ui-btn-icon-notext" data-transition="flip">INFO</a></label>
 			<input type="number" name="hour" id="n" value="" placeholder="for example '100'"></input>
 		</div>
 	
 		<div class="ui-field-contain">
-			<label for="name">Salary per hour:<a href="#info2" class="ui-btn ui-shadow ui-corner-all ui-icon-info ui-btn-icon-notext" data-transition="pop">INFO</a></label>
+			<label for="name">Salary per hour:<a href="#info2" class="ui-btn ui-shadow ui-corner-all ui-icon-info ui-btn-icon-notext" data-transition="flip">INFO</a></label>
 			<input type="number" name="salary" id="s" value="" placeholder="for example '60'"></input>
 		</div>
 	
 		<div class="ui-field-contain">
-			<label for="name">Your taxes:<a href="#info3" class="ui-btn ui-shadow ui-corner-all ui-icon-info ui-btn-icon-notext" data-transition="pop">INFO</a></label>
+			<label for="name">Your taxes:<a href="#info3" class="ui-btn ui-shadow ui-corner-all ui-icon-info ui-btn-icon-notext" data-transition="flip">INFO</a></label>
 			<input type="number" name="taxes" id="t" value="" placeholder="for example '8'"></input>
 		</div>
 	</br>
